--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 -i https://pypi.org/simple
 argparse==1.4.0
 cycler==0.10.0
-kiwisolver==1.3.1; python_version >= '3.6'
+kiwisolver==1.3.1
 matplotlib==3.3.3
-numpy==1.19.4; python_version >= '3.6'
+numpy==1.19.4
 pandas==1.1.4
-pillow==8.0.1; python_version >= '3.6'
-pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pillow==8.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2020.4
 scipy==1.5.4
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+seaborn==0.11.0
+six==1.15.0
